--- a/PSS/PSS/Shared/CollectionCreator.razor
+++ b/PSS/PSS/Shared/CollectionCreator.razor
@@ -14,7 +14,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public List<C.Collection> Collections { get; set; }
+    public List<Collection> Collections { get; set; }
 
     public static event EventHandler CollectionCreated;
         
