--- a/PSS/PSS/Shared/LibraryItem.razor
+++ b/PSS/PSS/Shared/LibraryItem.razor
@@ -12,7 +12,7 @@
 
 @code{
 
-	[Parameter, EditorRequired] public C.MediaRow MediaRow { get; set; }
+	[Parameter, EditorRequired] public MediaRow MediaRow { get; set; }
 
 	[Parameter, EditorRequired] public Action Rerender { get; set; }
 
