--- a/PSS/PSS/Shared/CollectionSelector.razor
+++ b/PSS/PSS/Shared/CollectionSelector.razor
@@ -57,8 +57,8 @@
 </div>
 
 @code {
-    public static List<C.Collection> albums;
-    public static List<C.Collection> folders;
+    public static List<Collection> albums;
+    public static List<Collection> folders;
     
     public static List<bool> checkedAlbums;
     private static List<bool> checkedFolders;
@@ -260,7 +260,7 @@
         }
         
         //From checkedAlbums or checkedFolders, figure out the index for it in checkedAlbums.
-        int FindIndex(List<bool> checkedList, List<C.Collection> collections, string albumID)
+        int FindIndex(List<bool> checkedList, List<Collection> collections, string albumID)
         {
             int parsedID = Int32.Parse(albumID);
             for (int i = 0; i < checkedList.Count; i++)
