Fix @page directives for Index and Import
I forgor to do this a while back 💀

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -1,4 +1,4 @@
-@page "/"
+@page "/import"
 @using Microsoft.VisualBasic.FileIO
 @using CS = PSS.Shared.CollectionSelector;
 @using static ImportFile
